src/objects/Course_Correlation__c.object
<CustomObject>
    <description>Global: Object used to store many IDs for a single course. Can be used to store integration IDs or legacy IDs</description>
    <fields>
        <fullName>Course__c</fullName>
        <description>Global: The Course that the ID relates to</description>
        <label>Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Course Correlation</relationshipLabel>
        <relationshipName>Course_Correlation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_Field_Name__c</fullName>
        <description>Used where the Source system holds more than one ID for each course</description>
        <label>External ID Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>The ID for the contact in an external system</description>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <description>The Name of the source External System</description>
        <label>External System</label>
        <picklist>
            <picklistValues>
                <fullName>Socrates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ocean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>The market that supplied the ID</description>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Course Correlation</label>
    <nameField>
        <displayFormat>UCC-{00000000}</displayFormat>
        <label>Course Correlation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Correlation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>